
Since we cannot compute Percentage of Nos, we compare:

SUM of Nos from GESIS with Employment rate, by sex from Estatwrap from Germany.

This would show: Integration of Germany. 

In ISEM paper, we had with respect to size of datasets:

1) 2 DS with 20,268 triples
3a) 4 DS with 24,636 triples
3b) 8 DS with 35,482 triples

We now would like to extend this.

==2014-07-17==
Problem: SPARQL construct query is not properly created, as is the N3 rule.

If we create the triple patterns for the measures. We once use the measures of inputcube1 (with more) and filter and once we use the already filtered measures which will result in a different measure number. 
	
I think, metadata should be created but not be used in querying if possible. *done*

Problem: Many duplicates in results of Convert-Cube operations. Problem is that we use shared dimensions
in query so that all possible combinations of shared dimension member combinations are used by newly
created observations.  

Solution: For any one combination should there not be only one possibility? No, since afterwards 
reasoning, again. Solution, remove reasoning after generation.


==2014-07-16==
* More nested Convert-Cube queries do not work, anymore.
* Maybe because of "isLoaded(dataset)"?
* Also, normalisation and reasoning is now done for each dataset.

==2014-07-14==
Problem: When I create the LogicalQueryPlan starting from a (preprocessed) dataset, I look for the "first" occurence of Base-Cube-Op and use that for the "schema".
Solution: Two possibilities:

1) Logical Olap Op can return the schema even though it is not executed, yet.

2) We really search for the first base-cube (on the left sides of the query plan).

Note later when "filtering" more logical query plans, we may need the logical ops to return the schema.

For now, we go just through them ourselves.

Now convert-cube is tested for isLoaded().

When creating "suitable" query plans, what do we need to check?

Let's see...
